--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     }
 
     header {
+      box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
       position: fixed;
       top: 0;
       left: 0;
@@ -107,7 +108,7 @@
   left: 0;
   width: 100%;
   background-color: white;
-  padding: 20px;
+  padding: 10px;
   display: flex;
   flex-direction: column; /* coloca um abaixo do outro */
   justify-content: center;
@@ -121,6 +122,23 @@
 
     
   </style>
+  <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1234558521514354');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1234558521514354&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
 </head>
 <body>
 
@@ -129,13 +147,29 @@
     <span id="cronometro">36:00:00</span>
   </header>
 
-  <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 20px; margin-bottom: 100px;">
+  <div style=" display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 20px; margin-bottom: 100px; flex-direction: column;">
+    <div style="display: flex; flex-direction: row; align-items: center; gap: 20px;">
+      <dotlottie-player
+  src="https://lottie.host/342fc97c-4918-4689-9a39-7a1ecf19903d/qgAnI8AbwE.lottie"
+  background="transparent"
+  speed="1"
+  style=" border-radius: 13px; width: 140px; height: 100px"
+  loop
+  autoplay
+></dotlottie-player>
+
+<p style="box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; background-color: white; padding: 10px; border-radius: 20px;" width="10px">
+          Itabuna recebe no mesmo dia !
+        </p>
+
+    </div>
     <div style="display: flex; flex-direction: row; align-items: center; padding: 40px; gap: 20px; ">
+
       <div>
-        <img id="promo-img" style="width: 170px; border-radius: 20px;" src="494355533_719472143871528_5570513098393312961_n.jpg" alt="">
+        <img id="promo-img" style="box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; width: 170px; border-radius: 20px;" src="494355533_719472143871528_5570513098393312961_n.jpg" alt="">
       </div>
       <div>
-        <p style="background-color: white; padding: 20px; border-radius: 20px;">
+        <p style="box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px; background-color: white; padding: 20px; border-radius: 20px;">
           Promoção por tempo limitado, faça seu pedido agora mesmo!
         </p>
       </div>
@@ -154,6 +188,7 @@
       </a>
     </div>
   </div>
+<script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script>
 
   <script>
   // Troca automática das imagens
