--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ src="https://www.facebook.com/tr?id=1234558521514354&ev=PageView&noscript=1"
     </div>
     <div >
       <a style="text-decoration: none;" href="https://www.contate.me/cliiccxzz">
-        <button  class="cssbuttons-io-button">
+        <button  onclick="fbq('track', 'Contact');"  class="cssbuttons-io-button">
           Enviar mensagem
           <div class="icon">
             <svg height="24" width="24" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
